# cyberguard-pro

./: .gitignore  README.md  app.py  models.py  pyproject.toml  report_generator.py  requirements.txt  routes.py  run.py  security_analysis.py  seed_admin.py  train_model.py
controllers/: web_routes.py
ml models/: phishing_rf_model.pkl
models/: database.py
services/: orchestrator.py
services/agents/: llm_agent.py  ml_agent.py  rule_agent.py
services/common/: cache.py  security_analyzer.py
static/css/: style.css
static/js/: main.js
templates/: 404.html  500.html  about.html  admin_create.html  admin_login.html  admin_user_activity.html  ai_scanner.html  base.html  common_measures.html  cyber_threats.html  dashboard.html  index.html  login.html  password_checker.html  password_generator.html  personal_password.html  register.html  survey.html  url_checker.html
